--- a/src/styles.css
+++ b/src/styles.css
@@ -85,12 +85,14 @@
   .img-store{
     border: 0;
     max-width: 100%;
+    max-height: 700px;
     height: auto;
     -ms-interpolation-mode: bicubic;
     display: inline-block;
     vertical-align: middle;
   }
   .closs {
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -98,18 +100,12 @@
   
   .closs .row > div {
     position: relative;
-    flex: 0 0 33.33%; /* Ajusta el ancho de las columnas según el número de columnas deseadas */
-    max-width: 400px;
+    max-width: 420px;
     margin: 10px;
     text-align: center;
   }
   
-  .closs .row > div img {
-    max-width: 100%;
-    max-height: 650px;
-  }
-  
-  .closs .row > div .text-link {
+   .text-link {
     position: absolute;
     top: 0;
     left: 0;
@@ -118,19 +114,58 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+   
+  }
+  .text-h2{
+    width: 70%;
+    position: relative;
+    left: 20%;
+    align-items: end;
+  }
+  
+  .img-new{
+  max-width: 100%;
+    height:500px;
+    
+  }
+/* Estilos CSS para el componente Pantalones */
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .product-item {
+    flex: 0 0 calc(33.33% - 10px); /* Establece el ancho de cada producto, descontando 10px para el margen entre elementos */
+    margin: 5px; /* Agrega un margen de 5px entre los productos */
+  }
+  
+  /* Estilos adicionales para los elementos del producto */
+  .col {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5); /* Color y opacidad del fondo */
-    color: #fff; /* Color del texto */
-    opacity: 0;
-    transition: opacity 0.3s ease;
   }
   
-  .closs .row > div:hover .text-link {
-    opacity: 1;
+  .img-new {
+    width: 100%; /* Establece el ancho de la imagen al 100% del contenedor */
+    height: auto; /* Ajusta la altura de la imagen automáticamente para mantener la proporción */
+    max-width: 600px; /* Establece el ancho máximo de la imagen */
+    max-height: 900px; /* Establece la altura máxima de la imagen */
+  }
+ /* Estilos CSS para el componente Pantalones */
+.col-lg-8 {
+    margin: auto;
+    padding: 70px;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente el contenido */
+    align-items: center; /* Centra verticalmente el contenido */
+    height: 100%; /* Asegura que el div ocupe toda la altura disponible */
   }
   
-  .closs .row > div .text-link h2,
-  .closs .row > div .text-link a {
-    margin: 10px;
+  .padding-title {
+    text-align: center; /* Centra el texto horizontalmente dentro del div */
   }
   
