--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,10 @@
     height:500px;
     
   }
+  .img-accesorios{
+     width: 560px;
+     height: 600px;
+  }
 /* Estilos CSS para el componente Pantalones */
 .product-list {
     display: flex;
