--- a/src/styles.css
+++ b/src/styles.css
@@ -110,18 +110,18 @@
   .closs {
     width: 100vw;
     display: flex;
+    flex: 0 0 calc(33.33% - 10px); /* Establece el ancho de cada producto*/
     flex-wrap: wrap;
     justify-content: center;
   }
   
-  .closs .row > div {
+  .text-relative {
+    box-sizing: border-box;
     position: relative;
-    max-width: 420px;
-    margin: 10px;
     text-align: center;
   }
-  
    .text-link {
+    color: white;
     position: absolute;
     top: 0;
     left: 0;
@@ -130,7 +130,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-   
+   align-items: center;
   }
   .text-h2{
     width: 70%;
@@ -138,11 +138,15 @@
     left: 20%;
     align-items: end;
   }
-  
-  .img-new{
-  max-width: 100%;
-    height:500px;
-    
+  .img-store-s {
+
+    box-sizing: border-box;
+    border-radius: 0;
+    margin: 10px;
+  }
+  .img-store-s:hover {
+    background-color: rgba(255, 251, 251, 0.8);
+    transition: background-color 0.3s ease;
   }
   .img-accesorios{
      width: 560px;
@@ -176,9 +180,28 @@
   .img-new {
     width: 100%; /* Establece el ancho de la imagen al 100% del contenedor */
     height: auto; /* Ajusta la altura de la imagen automáticamente para mantener la proporción */
-    max-width: 600px; /* Establece el ancho máximo de la imagen */
+    max-width: 550px; /* Establece el ancho máximo de la imagen */
     max-height: 900px; /* Establece la altura máxima de la imagen */
+    transition: transform 0.3s ease;
   }
+  .img-prod {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%; /* Ajusta el alto del contenedor según sea necesario */
+  }
+ .img-new:hover {
+    transform: scale(1.02);
+  }
+  .selected-talle {
+    border: 2px solid black;
+  }
+/* Estilo para el botón cuando se pasa el mouse por encima */
+.btn-dark.btn-dark-hover:hover {
+  background-color: #6c757d; /* Puedes ajustar el color aquí */
+}
+  
+  
  /* Estilos CSS para el componente Pantalones */
 .col-lg-8 {
     margin: auto;
